--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "file-saver": "^2.0.5",
+    "html-to-image": "^1.9.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-bootstrap": "^2.4.0",
