social and other changes

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-NEXT_MAIL_NAVBAR="/"
+NEXT_MAIL_NAVBAR="support@pipmakers.com"
 NEXT_FACEBOOK="//facebook.com/pipmakerss"
 NEXT_INSTAGRAM="//instagram.com/pipmakerss/"
-NEXT_TWITTER="/"
-NEXT_YOUTUBE="//youtube.com/pipmakerss"
-NEXT_TIKTOK="//tiktok.com/@pipmakerss"
+NEXT_TWITTER="https://twitter.com/Pipmakerss_"
+NEXT_YOUTUBE="https://www.youtube.com/channel/UCcoGdtk9MYAb3RcXaN8t-LQ"
+NEXT_TIKTOK="https://www.tiktok.com/@pipmakerss"
 NEXT_DISCORD="https://discord.gg/83kYNJGN"
